--- a/frontend/src/modules/header/root/templates/header.html
+++ b/frontend/src/modules/header/root/templates/header.html
@@ -1,7 +1,7 @@
 <header id="main-header">
     <div class="logo">
         <a href="./">
-            <img src="dist/images/logo.png" alt="Click to go to Home">
+            <img src="dist/beaconing/images/logo.png" alt="Click to go to Home">
         </a>
     </div>
     <div class="profile">
