--- a/frontend/src/modules/home/root/templates/active_plans.html
+++ b/frontend/src/modules/home/root/templates/active_plans.html
@@ -9,7 +9,7 @@
         <div id="active-plan-summary">
             <div class="plan">
                 <div class="image">
-                    <img src="dist/images/quest-image.jpg" alt="Algebra Beginnings">
+                    <img src="dist/beaconing/images/quest-image.jpg" alt="Algebra Beginnings">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -19,7 +19,7 @@
             </div>
             <div class="plan">
                 <div class="image">
-                    <img src="dist/images/quest-image.jpg" alt="First steps to Engineering">
+                    <img src="dist/beaconing/images/quest-image.jpg" alt="First steps to Engineering">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -29,7 +29,7 @@
             </div>
             <div class="plan">
                 <div class="image">
-                    <img src="dist/images/quest-image.jpg" alt="Advanced Masonary">
+                    <img src="dist/beaconing/images/quest-image.jpg" alt="Advanced Masonary">
                 </div>
                 <div class="info">
                     <div class="name">
