--- a/frontend/src/modules/home/root/templates/student_overview.html
+++ b/frontend/src/modules/home/root/templates/student_overview.html
@@ -28,7 +28,7 @@
                 <div class="students">
                   <div class="student">
                     <div class="flex-container tablet-hide">
-                      <div class="student-profile-image"><img class="profile-blue" src="dist/images/profile.png" alt="Example Student"/></div>
+                      <div class="student-profile-image"><img class="profile-blue" src="dist/beaconing/images/profile.png" alt="Example Student"/></div>
                     </div>
                     <div class="flex-container flex-column flex-spacearound flex-grow">
                       <div class="student-name">
@@ -44,7 +44,7 @@
                   </div>
                   <div class="student">
                     <div class="flex-container tablet-hide">
-                      <div class="student-profile-image"><img class="profile-blue" src="dist/images/profile.png" alt="Example Student"/></div>
+                      <div class="student-profile-image"><img class="profile-blue" src="dist/beaconing/images/profile.png" alt="Example Student"/></div>
                     </div>
                     <div class="flex-container flex-column flex-spacearound flex-grow">
                       <div class="student-name">
@@ -60,7 +60,7 @@
                   </div>
                   <div class="student">
                     <div class="flex-container tablet-hide">
-                      <div class="student-profile-image"><img class="profile-blue" src="dist/images/profile.png" alt="Example Student"/></div>
+                      <div class="student-profile-image"><img class="profile-blue" src="dist/beaconing/images/profile.png" alt="Example Student"/></div>
                     </div>
                     <div class="flex-container flex-column flex-spacearound flex-grow">
                       <div class="student-name">
@@ -83,7 +83,7 @@
                 <div class="students">
                   <div class="student">
                     <div class="flex-container tablet-hide">
-                      <div class="student-profile-image"><img class="profile-blue" src="dist/images/profile.png" alt="Example Student"/></div>
+                      <div class="student-profile-image"><img class="profile-blue" src="dist/beaconing/images/profile.png" alt="Example Student"/></div>
                     </div>
                     <div class="flex-container flex-column flex-spacearound flex-grow">
                       <div class="student-name">
@@ -99,7 +99,7 @@
                   </div>
                   <div class="student">
                     <div class="flex-container tablet-hide">
-                      <div class="student-profile-image"><img class="profile-blue" src="dist/images/profile.png" alt="Example Student"/></div>
+                      <div class="student-profile-image"><img class="profile-blue" src="dist/beaconing/images/profile.png" alt="Example Student"/></div>
                     </div>
                     <div class="flex-container flex-column flex-spacearound flex-grow">
                       <div class="student-name">
@@ -115,7 +115,7 @@
                   </div>
                   <div class="student">
                     <div class="flex-container tablet-hide">
-                      <div class="student-profile-image"><img class="profile-blue" src="dist/images/profile.png" alt="Example Student"/></div>
+                      <div class="student-profile-image"><img class="profile-blue" src="dist/beaconing/images/profile.png" alt="Example Student"/></div>
                     </div>
                     <div class="flex-container flex-column flex-spacearound flex-grow">
                       <div class="student-name">
@@ -138,7 +138,7 @@
                 <div class="students">
                   <div class="student">
                     <div class="flex-container tablet-hide">
-                      <div class="student-profile-image"><img class="profile-blue" src="dist/images/profile.png" alt="Example Student"/></div>
+                      <div class="student-profile-image"><img class="profile-blue" src="dist/beaconing/images/profile.png" alt="Example Student"/></div>
                     </div>
                     <div class="flex-container flex-column flex-spacearound flex-grow">
                       <div class="student-name">
@@ -154,7 +154,7 @@
                   </div>
                   <div class="student">
                     <div class="flex-container tablet-hide">
-                      <div class="student-profile-image"><img class="profile-blue" src="dist/images/profile.png" alt="Example Student"/></div>
+                      <div class="student-profile-image"><img class="profile-blue" src="dist/beaconing/images/profile.png" alt="Example Student"/></div>
                     </div>
                     <div class="flex-container flex-column flex-spacearound flex-grow">
                       <div class="student-name">
@@ -170,7 +170,7 @@
                   </div>
                   <div class="student">
                     <div class="flex-container tablet-hide">
-                      <div class="student-profile-image"><img class="profile-blue" src="dist/images/profile.png" alt="Example Student"/></div>
+                      <div class="student-profile-image"><img class="profile-blue" src="dist/beaconing/images/profile.png" alt="Example Student"/></div>
                     </div>
                     <div class="flex-container flex-column flex-spacearound flex-grow">
                       <div class="student-name">
