--- a/frontend/src/modules/lesson_manager/root/templates/active_plans.html
+++ b/frontend/src/modules/lesson_manager/root/templates/active_plans.html
@@ -6,15 +6,13 @@ ${scope.headerHTML}
     <section class="flex-column">
       ${scope.searchHTML}
     </section>
-    <div class="flex-container">
-      <section class="flex-column">
-        <div class="flex-container flex-wrap margin-20">
-          ${scope.glpsHTML}
-        </div>
-      </section>
+    <section class="flex-spacebetween">
+      <div class="flex-wrap flex-grow margin-20">
+        ${scope.glpsHTML}
+      </div>
       <aside class="sort">
         ${scope.sortHTML}
       </aside>
-    </div>
+    </section>
   </main>
 </div>
