--- a/frontend/src/scss/components/_sort.scss
+++ b/frontend/src/scss/components/_sort.scss
@@ -1,61 +1,110 @@
-#sort {
-	//padding: 0.25em;
-	font-size: 1.1em;
-	color: #52595e;
-	align-items: center;
+// #sort {
+// 	//padding: 0.25em;
+// 	font-size: 1.1em;
+// 	color: #52595e;
+// 	align-items: center;
 
-	> .title {
-		flex: none;
-		padding: 0.5em;
-	}
+// 	> .title {
+// 		flex: none;
+// 		padding: 0.5em;
+// 	}
 
-	.options {
-		flex-wrap: wrap;
-		align-items: center;
+// 	.options {
+// 		flex-wrap: wrap;
+// 		align-items: center;
 
-		a {
-			display: inherit;
-			align-items: center;
-			padding: 0.5em;
+// 		a {
+// 			display: inherit;
+// 			align-items: center;
+// 			padding: 0.5em;
 
-			&:hover {
-				text-decoration: underline;
-				cursor: pointer;
-			}
-		}
+// 			&:hover {
+// 				text-decoration: underline;
+// 				cursor: pointer;
+// 			}
+// 		}
 
-		label {
-			flex: none;
-			display: inherit;
-			align-items: center;
-			padding: 0.5em;
-			margin: 0 0.25em;
-		}
+// 		label {
+// 			flex: none;
+// 			display: inherit;
+// 			align-items: center;
+// 			padding: 0.5em;
+// 			margin: 0 0.25em;
+// 		}
 
-		input, select {
-			margin: 0 0.5em;
-			padding: 0.25em;
-			background: none;
-		}
+// 		input, select {
+// 			margin: 0 0.5em;
+// 			padding: 0.25em;
+// 			background: none;
+// 		}
 
-		input {
-			outline: none;
-			border: none;
-			border-bottom: 1px solid $bcn_light_orange;
+// 		input {
+// 			outline: none;
+// 			border: none;
+// 			border-bottom: 1px solid $bcn_light_orange;
 
-			&:focus {
-				border-bottom: 2px solid $bcn_light_orange;
-			}
-		}
+// 			&:focus {
+// 				border-bottom: 2px solid $bcn_light_orange;
+// 			}
+// 		}
 
-		select {
-			outline: none;
-			border: none;
-			border-bottom: 1px solid $bcn_light_orange;
+// 		select {
+// 			outline: none;
+// 			border: none;
+// 			border-bottom: 1px solid $bcn_light_orange;
 
-			&:focus {
-				border-bottom: 2px solid $bcn_light_orange;
-			}
-		}
-	}
+// 			&:focus {
+// 				border-bottom: 2px solid $bcn_light_orange;
+// 			}
+// 		}
+// 	}
+// }
+
+.sort {
+    padding-left: 1em;
+
+	.header {
+        span {
+            font-size: 1.2em;
+        }
+    }
+
+    .sort-group {
+        margin: 1em 0;
+        flex-direction: column;
+
+        > .title {
+            margin-bottom: 0.4em;
+            padding-bottom: 0.2em;
+
+            span {
+                font-weight: 400;
+            }
+        }
+
+        > .content {
+            flex-direction: column;
+            padding: 0 0.1em;
+
+            .sort-option {
+                padding: 0.25em 0.4em;
+                margin: 0.1em 0;
+                border-bottom: 1.5px dashed $bcn_light_orange;
+
+                &.active {
+                    border-bottom: 1.5px solid $bcn_light_orange;
+                    font-weight: 400;
+
+                    &:hover {
+                        border-bottom: 1.5px dashed $bcn_light_orange;
+                    }
+                }
+
+                &:hover {
+                    border-bottom: 1.5px solid $bcn_light_orange;
+                    cursor: pointer;  
+                }
+            }
+        }
+    }
 }
