--- a/frontend/src/scss/components/_tile.scss
+++ b/frontend/src/scss/components/_tile.scss
@@ -15,6 +15,7 @@
 		letter-spacing: 1px;
 		display: flex;
 		justify-content: space-between;
+		flex-shrink: 1;
 
 		p {
 			margin: 0;
@@ -33,7 +34,7 @@
 		padding: 0.5em;
 		background: $secondary_element_colour;
 		color: $secondary_font_colour;
-		height: 100%;
+		flex-grow: 1;
 
 		.content-title {
 			padding: 1.5em 0.25em;
