page and config changes

--- a/frontend/src/scss/lesson_plans/_all.scss
+++ b/frontend/src/scss/lesson_plans/_all.scss
@@ -1,4 +1,7 @@
-@import 'missions';
-@import 'overview';
-@import 'summary';
+// @import 'missions';
+// @import 'overview';
+// @import 'summary';
 // @import 'wizard';
+@import 'plan_header';
+@import 'plan_details';
+@import 'glp_box';
