--- a/frontend/src/scss/lesson_plans/_all.scss
+++ b/frontend/src/scss/lesson_plans/_all.scss
@@ -2,6 +2,7 @@
 // @import 'overview';
 // @import 'summary';
 // @import 'wizard';
-@import 'plan_header';
-@import 'plan_details';
+@import 'headers';
+@import 'details';
 @import 'glp_box';
+@import 'assign_options';
