--- a/frontend/src/scss/variables/_colours.scss
+++ b/frontend/src/scss/variables/_colours.scss
@@ -2,6 +2,8 @@
 $primary_font_colour: #1b2126;
 $secondary_font_colour: white;
 
+$primary_font_colour_faded: #58636c;
+
 //backgrounds
 $primary_element_background: #2c353e;
 $primary_element_background_hover: #38424c;
