--- a/frontend/src/scss/lesson_plans/_headers.scss
+++ b/frontend/src/scss/lesson_plans/_headers.scss
@@ -30,3 +30,33 @@
         }
     }
 }
+
+#mission-header {
+    @extend #plan-header;
+
+    .name-group {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    h1 {
+        margin: 0;
+    }
+
+    h2 {
+        margin: 0.1em 0;
+        font-weight: 300;
+        font-size: 1.2em;
+        color: $primary_font_colour_faded;
+
+        @media screen and (max-width: 46.875em) {
+            max-width: 10em;
+            font-size: 0.8em;
+        }
+    }
+}
+
+#assign-header {
+    @extend #mission-header;
+}
