basic implementation of adding groups

--- a/frontend/src/scss/components/_buttons.scss
+++ b/frontend/src/scss/components/_buttons.scss
@@ -56,9 +56,9 @@
 	}
 }
 
-.sort-button {
+.outline-button {
 	display: flex;
-	margin: 0.55em;
+	margin: 9.2px;
 	padding: 0.5em 1em;
 	align-items: center;
 	border: 1px solid $bcn_light_orange;
