--- a/frontend/src/scss/components/_inputs.scss
+++ b/frontend/src/scss/components/_inputs.scss
@@ -47,3 +47,22 @@
 		}
 	}
 }
+
+.input-box {
+	align-items: center;
+
+	input {
+		padding: 0.75em;
+		margin: 0.5em;
+		outline: none;
+		border: none;
+		border: 1px solid $bcn_light_orange;
+		background: white;
+		background: transparent;
+		font-size: 1.15em;
+
+		&:focus {
+			outline: 1px solid $bcn_light_orange;
+		}
+	}
+}
