--- a/frontend/src/scss/components/_textarea.scss
+++ b/frontend/src/scss/components/_textarea.scss
@@ -7,6 +7,7 @@ textarea {
 	padding: 0.5em;
 	font-size: 1.15em;
 	line-height: 1.25;
+	margin-top: 0.25em;
 
 	&:focus {
 		//border: 2px dashed $bcn_light_orange;
