--- a/frontend/src/scss/components/_forms.scss
+++ b/frontend/src/scss/components/_forms.scss
@@ -42,7 +42,7 @@
 	}
 }
 
-form.create-group, form.create-student, form.create-new-plan {
+form.create-group, form.create-student, form.create-new-plan, form.edit-teacher {
 	display: flex;
 	flex-direction: column;
 
