--- a/frontend/src/scss/components/header/_main.scss
+++ b/frontend/src/scss/components/header/_main.scss
@@ -24,24 +24,33 @@
 		align-items: center;
 
 		.profile-img {
-			// border-right: 1px solid #dde3e8;
-			padding: 0.3em;
-			display: flex;
-			justify-content: center;
+			a {
+				padding: 0.3em;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				flex-direction: column;
 
-			&:hover {
-				cursor: pointer;
-			}
+				span {
+					margin-top: 0.2em;
+					font-size: 0.85em;
+					text-align: center;
+				}
+	
+				&:hover {
+					cursor: pointer;
+				}
+	
+				img {
+					// border-radius: 50%;
+					height: 65%;
+					width: 65%;
+					// padding: 0.25em;
 
-			img {
-				// border-radius: 50%;
-				height: 65%;
-				width: 65%;
-				// padding: 0.25em;
-			}
-
-			@media screen and (max-width: 39.9375em) {
-				display: none;
+					@media screen and (max-width: 39.9375em) {
+						display: none;
+					}
+				}
 			}
 		}
 
