--- a/frontend/src/scss/dashboard/tiles/_student_overview.scss
+++ b/frontend/src/scss/dashboard/tiles/_student_overview.scss
@@ -18,6 +18,41 @@
 				}
 			}
 
+			.select {
+				position: relative;
+				display: flex;
+				align-items: center;
+		
+				&:before {
+					font-family: "fontello";
+					content: '\f107';
+					position: absolute;
+					right: 0;
+					font-size: 1em;
+					pointer-events: none;
+				}
+		
+				select {
+					margin-left: 0.4em;
+					color: #e6eaec;
+					width: 100%;
+					padding: 0.1em;
+					padding-right: 0.8em;
+					font-size: 0.8em;
+					background: none;
+					outline: none;
+					border: none;
+					border-bottom: 1px solid $bcn_light_orange;
+					-moz-appearance: none;
+					-webkit-appearance: none;
+					appearance: none;
+			
+					&:focus {
+						box-shadow: 0 1px $bcn_light_orange;
+					}
+				}
+			}
+
 			a.active {
 				text-decoration: underline;
 			}
