--- a/frontend/src/scss/components/header/_main.scss
+++ b/frontend/src/scss/components/header/_main.scss
@@ -7,21 +7,31 @@
 	box-shadow: $primary_element_box_shadow;
 
 	.logo {
-		padding: 0.5em 1.5em;
+		padding: 0.5em;
+
+		@include for-tablet-landscape-up {
+			padding: 0.5em 1.5em;
+		}
 
 		img {
-			height: 3.5em;
+			height: 2.5em;
 
-			@media screen and (max-width: 39.9375em) {
-				height: 2.5em;
+			@include for-tablet-landscape-up {
+				height: 3.5em;
 			}
 		}
 	}
 
 	.profile {
 		display: flex;
-		padding: 1em;
+		flex-direction: column-reverse;
+		padding: 0.25em;
 		align-items: center;
+
+		@include for-tablet-landscape-up {
+			padding: 1em;
+			flex-direction: row;
+		}
 
 		.profile-img {
 			a {
@@ -42,26 +52,29 @@
 				}
 	
 				img {
-					// border-radius: 50%;
+					display: none;
 					height: 65%;
 					width: 65%;
-					// padding: 0.25em;
 
-					@media screen and (max-width: 39.9375em) {
-						display: none;
+					@include for-tablet-landscape-up {
+						display: flex;
 					}
 				}
 			}
 		}
 
 		.logout {
-			padding: 0.5em;
 			display: flex;
 			flex-direction: column;
 
 			a {
 				@extend .link-underline;
+				padding: 0.15em;
 				font-weight: 400;
+
+				@include for-tablet-landscape-up {
+					padding: 0.5em;
+				}
 			}
 		}
 	}
