--- a/frontend/src/scss/lesson_plans/_headers.scss
+++ b/frontend/src/scss/lesson_plans/_headers.scss
@@ -1,11 +1,12 @@
 #plan-header {
     justify-content: space-between;
     align-items: center;
-    font-size: 1.2em;
+    font-size: 1em;
     border-bottom: 1px solid $bcn-light-orange;
+    padding-bottom: 0.5em;
 
     @media screen and (max-width: 46.875em) {
-        font-size: 1em;
+        font-size: 0.85em;
     }
 
     .back {
@@ -23,10 +24,10 @@
         font-weight: 400;
         text-overflow: ellipsis;
         max-width: 20em;
-        font-size: 1.8em;
+        font-size: 1.6em;
         @media screen and (max-width: 46.875em) {
             max-width: 10em;
-            font-size: 1.2em;
+            font-size: 1.15em;
         }
     }
 }
