--- a/frontend/src/scss/components/_all.scss
+++ b/frontend/src/scss/components/_all.scss
@@ -1,6 +1,9 @@
 // headers
 @import 'header/main';
 
+// footers
+@import 'footer/main';
+
 // navigation
 @import 'navigation/main';
 @import 'navigation/sub';
