--- a/frontend/src/scss/components/navigation/_mini.scss
+++ b/frontend/src/scss/components/navigation/_mini.scss
@@ -61,6 +61,10 @@ nav.mini-wide {
 			text-decoration: underline;
 			cursor: pointer;
 		}
+
+		@include for-phone-only {
+			margin: 0.1em 0.3em;					
+		}
 	}
 
 	a.active {
