--- a/frontend/src/scss/components/_containers.scss
+++ b/frontend/src/scss/components/_containers.scss
@@ -6,3 +6,163 @@
 .flex-container {
 	display: flex;
 }
+
+.student-box {
+    border: 1px solid $bcn-light-orange;
+    padding: 1em;
+    flex: 25%;
+    margin: 1em;
+
+    figure {
+        padding: 1em;
+        margin: 0 0.25em 0 0;
+
+        img {
+            width: 8em;
+            height: auto;
+        }
+    }
+    
+    .info {
+        justify-content: space-around;
+
+        .title {
+            padding: 1em;
+
+            h4 {
+                margin: 0;
+                font-weight: 300;
+                font-size: 1.2em;
+            }
+        }
+
+        a {
+            padding: 1em;
+            @extend .link-underline;
+            font-weight: 400;
+        }
+
+        span {
+            padding: 1em;
+
+            &.tick {
+                color: green;
+            }
+        }
+    }
+}
+
+.small-box {
+    border: 1px solid $bcn-light-orange;
+    padding: 1em;
+    flex: 33%;
+    margin: 1em;
+    justify-content: space-between;
+    align-items: center;
+
+    > .title {
+        h4 {
+            margin: 0;
+            font-weight: 400;
+            font-size: 1.2em;
+        }
+    }
+
+    a {
+        @extend .link-underline;
+    }
+}
+
+.plans-container {
+    .status {
+        flex-grow: 1;
+        justify-content: center;
+        align-items: center;
+
+        span {
+            font-size: 1.4em;
+        }
+    }
+}
+
+.glp-box {
+	margin: 0.25em 0.5em;
+	padding: 1em 1.5em;
+	border: 1px solid $bcn_light_orange;
+	// justify-content: space-between;
+
+	.toolbar {
+		justify-content: flex-end;
+
+		a.item {
+			@extend .link-underline;
+			padding: 0.1em;
+			margin: 0 0.15em;
+			font-weight: 400;
+			//font-size: 0.9em;
+		}
+	}
+
+	> .title {
+		justify-content: space-between;
+		align-items: center;
+		// padding-bottom: 0.75em;
+		border-bottom: 1px solid rgba($primary_element_background, 0.4);
+		margin-bottom: 0.25em;
+
+		h3 {
+			font-weight: 400;
+			font-size: 1.25em;
+			margin: 0.25em;
+		}
+
+		h4 {
+			font-weight: 400;
+			font-size: 1.15em;
+			margin: 0.25em;
+		}
+	}
+
+	> .content {
+		padding: 0.5em;
+		justify-content: space-between;
+
+		.description, .topic, .domain {
+			flex-direction: column;
+		}
+
+		.link-underline {
+			margin-left: 0.25em;
+		}
+
+		strong {
+			font-weight: 400;
+		}
+
+		figure {
+			margin-left: 0;
+
+			img {
+				border-radius: 50%;
+				padding: 0.25em;
+				width: 8em;
+				height: 8em;
+
+				@media screen and (min-width: 64em) and (max-width: 104.9375em) {
+					width: 7em;
+					height: 7em;
+				}
+
+				@media screen and (min-width: 40em) and (max-width: 63.9375em) {
+					width: 6em;
+					height: 6em;
+				}
+
+				@media screen and (max-width: 39.9375em) {
+					width: 5em;
+					height: 5em;
+				}
+			}
+		}
+	}
+}
