--- a/frontend/src/scss/components/navigation/_sub.scss
+++ b/frontend/src/scss/components/navigation/_sub.scss
@@ -3,13 +3,10 @@
 	font-family: $secondary_font;
 	color: $secondary_font_colour;
 	background: $secondary_element_colour;
-	min-width: 13.5em;
+	// min-width: 13.5em;
 	box-shadow: $primary_element_box_shadow;
 	border-left: 2px solid $bcn_light_orange;
-
-	@media screen and (max-width: 78.125em) {
-		min-width: auto;
-	}
+	font-size: 0.9em;
 
 	#nav-header {
 		background: #334250;
@@ -31,18 +28,19 @@
 
 	.item {
 		border-top: 1px solid #333e48;
-		padding: 1.2em;
+		padding: 1em 0.5em;
 		text-decoration: none;
 		color: $secondary_font_colour;
 		box-shadow: $primary_element_box_shadow;
 		flex-direction: column;
+		display: flex;
 
 		@media screen and (max-width: 78.125em) {
-			padding: 1em;
+			padding: 0.75em 0.25em;
 			text-align: center;
 		}
 
-		&:hover:not(.mission-group) {
+		&:hover {
             cursor: pointer;
             background: #51697f;
         }
@@ -67,35 +65,6 @@
 				margin: 0;
 			}
 		}
-
-		.mission-name {
-			color: #afb7bb;
-		}
-	}
-
-	.active-quest {
-		//border-right: 3px solid $bcn_light_orange;
-		position: relative;
-	}
-
-	.active-quest:after {
-		right: 0;
-	    top: 50%;
-	    border: solid transparent;
-	    content: " ";
-	    height: 0;
-	    width: 0;
-	    position: absolute;
-	    pointer-events: none;
-	    border-color: transparent;
-	    border-right-color: white;
-	    border-width: 10px;
-	    margin-top: -10px;
-
-	    @media screen and (max-width: 78.125em) {
-			border-width: 8px;
-	    	margin-top: -8px;
-		}
 	}
 
 	.active-white {
@@ -114,87 +83,12 @@
 	    pointer-events: none;
 	    border-color: transparent;
 	    border-right-color: white;
-	    border-width: 12px;
-	    margin-top: -12px;
+	    border-width: 8px;
+	    margin-top: -8px;
 
 	    @media screen and (max-width: 78.125em) {
-			border-width: 8px;
-	    	margin-top: -8px;
-		}
-	}
-
-	.active-mission {
-		background: #334250;
-	}
-
-	.mission-group {
-		padding: 0;
-
-		.mission-info {
-			padding: 1.2em;
-			border-bottom: 1px solid #505f6d;
-
-			a {
-				color: $secondary_font_colour;
-			}
-
-			.mission-title {
-				display: flex;
-				flex-direction: column;
-
-				span {
-					margin: 0.05em 1em;
-				}
-			}
-		}
-
-		.quest-group {
-			margin-left: 1.5em;
-			padding: 1em 0 1em 1em;
-			display: flex;
-			flex-direction: column;
-
-			.quest {
-				display: flex;
-				justify-content: space-between;
-				padding: 0.5em 1.5em 0.5em 0;
-
-				a {
-					color: $secondary_font_colour;
-				}
-
-				&:hover:not(.active-quest) {
-					.quest-name {
-						color: #afb7bb;
-					}
-				}
-
-				&:hover {
-					cursor: pointer;
-				}
-
-				.quest-name {
-					margin: 0;
-					margin-right: 1em;
-				}
-
-				.quest-percentage {
-					margin: 0;
-					margin-left: 1em;
-					color: #afb7bb;
-				}
-			}
-		}
-	}
-
-	.quest-toolbar {
-		display: flex;
-		justify-content: flex-end;
-		padding: 1em;
-		border-top: 1px solid #505f6d;
-
-		i:hover {
-			cursor: pointer;
+			border-width: 4px;
+	    	margin-top: -4px;
 		}
 	}
 }
