--- a/frontend/src/scss/components/calendar/_events.scss
+++ b/frontend/src/scss/components/calendar/_events.scss
@@ -1,10 +1,13 @@
 .events {
 	display: block;
+	padding: 0;
+	margin: 0;
 }
 
 .event {
 	display: block;
 	text-align: center;
+	padding: 0 0.2em;
 
 	border-radius: 4px;
 	margin-bottom: 5px;
@@ -19,19 +22,39 @@
 
 .event-desc {
 	color: #666;
-	margin: 3px 0 7px 0;
 	text-decoration: none;	
 }
 
-.calendar-cell {
-	display: table-cell;
-    overflow: hidden;
-	padding: 0;
-	height: 180px;
-	width: 180px;
+.calendar-cell,
+.calendar-heading-cell {
+	display: flex;
+	flex-direction: column;
+
+	box-sizing: border-box;
+	flex-grow: 1;
+	width: 14.28%;
+
+	padding: 0.8em 0.8em;
+	overflow: hidden;
+	list-style: none;
 }
 
-.calendar-row {
+.calendar-cell {
+	height: 180px;
+}
+
+.calendar-heading-cell {
+	background: #2d353e;
+	color: #fff;
+	font-size: 14pt;
+	border: none !important;
+}
+
+.calendar-heading-cell p {
+	align-self: center;
+}
+
+.calendar-header {
 	
 }
 
@@ -40,6 +63,7 @@
 	border: 1px solid #f5f5f5;
 }
 
+/*
 .calendar-header {
 	text-alignment: center;
 	padding: 10px 6px;
@@ -48,14 +72,17 @@
 	font-size: 14pt;
 	border: none !important;
 }
+*/
 
 .calendar-day {
-	
+	align-self: flex-end;
 }
 
 .calendar {
-	table-layout: fixed;
-	border-collapse: collapse;
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 0 3em 0;
+	padding: 0;
 	border: 1px solid #f5f5f5;
 }
 
