--- a/frontend/src/scss/components/calendar/_events.scss
+++ b/frontend/src/scss/components/calendar/_events.scss
@@ -6,8 +6,7 @@
 
 .event {
 	display: block;
-	text-align: center;
-	padding: 0 0.2em;
+	text-align: left;
 
 	border-radius: 4px;
 	margin-bottom: 5px;
@@ -18,6 +17,7 @@
 
 .event-name, .event-desc {
 	width: 100%;
+	padding: 0 0.2em;
 }
 
 .event-desc {
@@ -40,7 +40,7 @@
 }
 
 .calendar-cell {
-	min-height: 90px;
+	height: 20vh;
 }
 
 .calendar-heading-cell {
@@ -71,7 +71,9 @@
 
 .current-day {
 	/* hmm */
-	border-bottom: 2.5px solid #fc3d39;
+	// border-bottom: 2.5px solid #fc3d39;
+	color: #fff;
+	background: #f26c42;
 }
 
 /*
