use event styling; only calendar day is made white on current day rather than all body text

--- a/frontend/src/scss/components/calendar/_events.scss
+++ b/frontend/src/scss/components/calendar/_events.scss
@@ -69,10 +69,12 @@
 	align-self: flex-end;
 }
 
+.current-day .calendar-day {
+	color: #fff;
+}
 .current-day {
 	/* hmm */
 	// border-bottom: 2.5px solid #fc3d39;
-	color: #fff;
 	background:rgba(242, 108, 66, 0.7);
 }
 
