cleanup styles for calendar

--- a/frontend/src/scss/components/_all.scss
+++ b/frontend/src/scss/components/_all.scss
@@ -37,8 +37,8 @@
 @import 'profile/info';
 
 // Calendar
-@import 'calendar/table';
 @import 'calendar/events';
+@import 'calendar/calendar';
 
 // Search
 @import 'search/search_results';
