--- a/frontend/src/scss/components/_asides.scss
+++ b/frontend/src/scss/components/_asides.scss
@@ -1,4 +1,4 @@
-aside#student-aside {
+aside#student-aside, aside#group-aside {
     margin-left: 0.5em;
     box-shadow: $primary_element_box_shadow;
     background: $secondary_element_colour;
@@ -6,43 +6,7 @@ aside#student-aside {
     font-family: $secondary_font;
     flex-direction: column;
 
-    #student-info {
-        align-content: center;
-        align-items: center;
-
-        figure {
-            padding: 0.25em 2em 1em 2em;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            figcaption {
-                text-align: center;
-                font-weight: 300;
-                font-size: 1.2em;
-                padding: 0.5em;
-            }
-
-            img{
-                width: 10em;
-
-                @media screen and (min-width: 64em) and (max-width: 104.9375em) {
-                    width: 7em;
-                }
-    
-                @media screen and (min-width: 40em) and (max-width: 63.9375em) {
-                    width: 6em;
-                }
-    
-                @media screen and (max-width: 39.9375em) {
-                    width: 5em;
-                }
-            }
-        }
-    }
-
-    #student-options {
+    #student-options, #group-options {
         @extend nav.mini;
 
         color: $secondary_font_colour;
@@ -54,7 +18,7 @@ aside#student-aside {
         }
     }
 
-    #student-nav {
+    #student-nav, #group-nav {
         flex-direction: column;
 
         .item {
@@ -114,14 +78,45 @@ aside#student-aside {
     }
 }
 
-aside#group-aside {
-    margin-left: 0.5em;
-    box-shadow: $primary_element_box_shadow;
-    background: $secondary_element_colour;
-    color: $secondary_font_colour;
-    font-family: $secondary_font;
-    flex-direction: column;
+aside#student-aside {
+    #student-info {
+        align-content: center;
+        align-items: center;
 
+        figure {
+            padding: 0.25em 2em 1em;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            figcaption {
+                text-align: center;
+                font-weight: 300;
+                font-size: 1.2em;
+                padding: 0.5em;
+            }
+
+            img{
+                width: 10em;
+
+                @media screen and (min-width: 64em) and (max-width: 104.9375em) {
+                    width: 7em;
+                }
+    
+                @media screen and (min-width: 40em) and (max-width: 63.9375em) {
+                    width: 6em;
+                }
+    
+                @media screen and (max-width: 39.9375em) {
+                    width: 5em;
+                }
+            }
+        }
+    }
+}
+
+aside#group-aside {
     #group-info {
         align-content: center;
         align-items: center;
@@ -136,77 +131,6 @@ aside#group-aside {
 
         h3 {
             font-weight: 300;
-        }
-    }
-
-    #group-options {
-        @extend nav.mini;
-
-        color: $secondary_font_colour;
-        padding: 0.25em;
-        justify-content: flex-end;
-
-        a {
-            padding: 0.2em 0;
-        }
-    }
-
-    #group-nav {
-        flex-direction: column;
-
-        .item {
-            border-top: 1px solid #333e48;
-            padding: 1.2em;
-            text-decoration: none;
-            color: $secondary_font_colour;
-            box-shadow: $primary_element_box_shadow;
-            flex-direction: column;
-            text-align: center;
-
-            @media screen and (max-width: 78.125em) {
-                padding: 1em;
-            }
-
-            &:last-child {
-                border-bottom: 1px solid #333e48;
-            }
-
-            span {
-                margin: 0.05em 1em;
-
-                @media screen and (max-width: 78.125em) {
-                    margin: 0;
-                }
-            }
-
-            &:hover {
-                cursor: pointer;
-                background: #51697f;
-            }
-        }
-        
-        .active {
-            position: relative;
-            
-            &:after {
-                left: 0;
-                top: 50%;
-                border: solid transparent;
-                content: " ";
-                height: 0;
-                width: 0;
-                position: absolute;
-                pointer-events: none;
-                border-color: transparent;
-                border-left-color: white;
-                border-width: 12px;
-                margin-top: -12px;
-        
-                @media screen and (max-width: 78.125em) {
-                    border-width: 8px;
-                    margin-top: -8px;
-                }
-            }
         }
     }
 }
