--- a/frontend/src/scss/components/_forms.scss
+++ b/frontend/src/scss/components/_forms.scss
@@ -56,9 +56,9 @@ form.create-group, form.create-student, form.create-new-plan, form.edit-teacher 
 		}
 	}
 
-	small { 
+	small {
 		font-size: 0.9em;
-		margin: 0.75em 0.5em 0 0.5em;
+		margin: 0.75em 0.5em 0;
 	}
 
 	input.text-field {
