--- a/frontend/src/scss/components/calendar/_calendar.scss
+++ b/frontend/src/scss/components/calendar/_calendar.scss
@@ -64,12 +64,12 @@
 .calendar {
 	display: flex;
 	flex-wrap: wrap;
-	margin: 0 0 3em 0;
+	margin-bottom: 3em;
 	padding: 0;
 	border: 1px solid #f5f5f5;
 }
 
-.prev-month, 
+.prev-month,
 .next-month {
 	color: #999;
 	background: #e5e5e5;
@@ -82,7 +82,6 @@
 
 // this is a bit awkward
 .full-width,
-.student-list,
 .student-list,
 .studentinfo-col,
 .calendar-col,
