--- a/frontend/src/scss/components/tiles/_active_plans.scss
+++ b/frontend/src/scss/components/tiles/_active_plans.scss
@@ -13,67 +13,37 @@
 	}
 
 	.plan {
-		align-items: center;
-		margin: 0.5em 0;
-		padding-bottom: 0.25em;
+		padding: 0.75em;
+		justify-content: space-between;
 		border-bottom: 1px solid rgba(#7c8ea0, 0.5);
 
 		&:last-child {
 			border-bottom: none;
 		}
 
-		.image {
-			padding: 0 0.25em;
-			//flex: 10%;
+		.description {
+			text-align: right;
+		}
 
-			&:hover {
-				cursor: pointer;
-			}
+		@include for-tablet-portrait-up {
+			padding: 1em;
+		}
 
-			img {
-				width: 6em;
-				height: 6em;
+		@mixin for-tablet-landscape-up {
+			padding: 1.5em;
+		}
 
-				@media screen and (min-width: 64em) and (max-width: 104.9375em) {
-					width: 5em;
-					height: 5em;
-				}
+		a {
+			margin-left: 0.4em;
+			font-weight: 400;
+		}
 
-				@media screen and (min-width: 40em) and (max-width: 63.9375em) {
-					width: 4em;
-					height: 4em;
-				}
-
-				@media screen and (max-width: 39.9375em) {
-					width: 3em;
-					height: 3em;
-				}
-			}
+		p {
+			margin: 0;
 		}
 
 		.info {
-			flex-direction: column;
-			justify-content: center;
-			align-items: flex-end;
-			flex-grow: 1;
-			padding: 0.2em;
-
-			.name {
-				font-weight: 400;
-
-				&:hover {
-					text-decoration: underline;
-					cursor: pointer;
-				}
-			}
-
-			.name, .number {
-				padding: 0.5em 0;
-
-				p {
-					margin: 0;
-				}
-			}
+			display: inherit;
 		}
 	}
 }
