--- a/frontend/src/scss/components/tiles/_recent_activity.scss
+++ b/frontend/src/scss/components/tiles/_recent_activity.scss
@@ -15,6 +15,11 @@
 	.activity {
 		padding: 0.75em;
 		justify-content: space-between;
+		border-bottom: 1px solid rgba(#7c8ea0, 0.5);
+
+		&:last-child {
+			border-bottom: none;
+		}
 
 		@include for-tablet-portrait-up {
 			padding: 1em;
