changed some of the styling on the main page

--- a/frontend/src/scss/components/header/_main.scss
+++ b/frontend/src/scss/components/header/_main.scss
@@ -4,7 +4,7 @@
 	color: $secondary_font_colour;
 	justify-content: space-between;
 	align-items: center;
-	box-shadow: $primary_element_box_shadow;
+	border-bottom: 2px solid #a9b5c0;
 
 	.logo {
 		padding: 0.5em;
