calendar design tweaks; calendar no longer refreshes state when unnecessary

--- a/frontend/src/scss/components/calendar/_calendar.scss
+++ b/frontend/src/scss/components/calendar/_calendar.scss
@@ -20,7 +20,7 @@
 	background: #2d353e;
 	color: #fff;
 	font-size: 14pt;
-	border: none !important;
+	border-bottom: 2px solid #a9b5c0;
 }
 
 .calendar-heading-cell p {
