--- a/frontend/src/scss/components/calendar/_events.scss
+++ b/frontend/src/scss/components/calendar/_events.scss
@@ -1,3 +1,21 @@
+.calendar-buttons {
+	display: flex;
+	justify-content: space-between;
+	border: 1px solid none;
+}
+
+.btn {
+	display: inline-block;
+    padding: 0.5em 2em;
+    background: rgba(242, 108, 66, 0.7);
+    color: white;
+	cursor: pointer;
+}
+
+.btn:focus {
+	background: #e87f62
+}
+
 .events {
 	display: block;
 	padding: 0;
