--- a/frontend/src/scss/components/calendar/_events.scss
+++ b/frontend/src/scss/components/calendar/_events.scss
@@ -24,18 +24,17 @@
 
 .event {
 	display: block;
-	text-align: left;
-
-	border-radius: 4px;
 	margin-bottom: 5px;
-
 	background: #e4f2f2;
 	text-decoration: none;
+	text-align: center;
+	padding: 0.25em;
 }
 
-.event-name, .event-desc {
+.event-name, 
+.event-desc {
 	width: 100%;
-	padding: 0 0.2em;
+	overflow-wrap: break-word;
 }
 
 .event-desc {
