--- a/frontend/src/scss/components/tiles/_student_overview.scss
+++ b/frontend/src/scss/components/tiles/_student_overview.scss
@@ -6,6 +6,7 @@
 		justify-content: space-between;
 
 		.sort-menu {
+			padding: 0.1em 0.2em;
 			color: #e6eaec;
 
 			a {
@@ -16,6 +17,10 @@
 					text-decoration: underline;
 					cursor: pointer;
 				}
+			}
+
+			span {
+				white-space: nowrap;
 			}
 
 			.select {
@@ -75,8 +80,8 @@
 			justify-content: center;
 
 			h3 {
-				font-weight: 300;
-				font-size: 1.25em;
+				font-weight: 400;
+				font-size: 1.4em;
 				margin: 0;
 			}
 		}
