--- a/frontend/src/scss/components/tiles/_active_plans.scss
+++ b/frontend/src/scss/components/tiles/_active_plans.scss
@@ -13,8 +13,14 @@
 	}
 
 	.plan {
+		display: grid;
+		grid-gap: 0.5em;
+		grid-template-columns: 1fr;
+		grid-template-rows: 1fr 2fr;
+		grid-template-areas:
+			"info"
+			"desc";
 		padding: 0.75em;
-		justify-content: space-between;
 		border-bottom: 1px solid rgba(#7c8ea0, 0.5);
 
 		&:last-child {
@@ -22,6 +28,9 @@
 		}
 
 		@include for-tablet-portrait-up {
+			grid-template-rows: 1fr;
+			grid-template-columns: 6em 1fr;
+			grid-template-areas: "info desc";
 			padding: 1em;
 		}
 
@@ -30,7 +39,6 @@
 		}
 
 		a {
-			margin-left: 0.4em;
 			font-weight: 400;
 		}
 
@@ -39,7 +47,13 @@
 		}
 
 		.info {
-			display: inherit;
+			flex-grow: 1;
+			grid-area: info;
+		}
+
+		.desc {
+			flex-grow: 1;
+			grid-area: desc;
 		}
 	}
 }
