--- a/frontend/src/scss/components/lesson_manager/_assign_options.scss
+++ b/frontend/src/scss/components/lesson_manager/_assign_options.scss
@@ -4,7 +4,7 @@
     .title {
         margin: 0.5em;
 
-        h4 {
+        > h4 {
             margin: 0;
             font-weight: 400;
             font-size: 1.15em;
