--- a/frontend/src/scss/variables/_colours.scss
+++ b/frontend/src/scss/variables/_colours.scss
@@ -3,6 +3,7 @@ $primary_font_colour: #1b2126;
 $secondary_font_colour: white;
 
 $primary_font_colour_faded: #58636c;
+$secondary_font_colour_faded: #ddd;
 
 //backgrounds
 $primary_element_background: #2c353e;
