calendar due event displays; calendar goes to due event if on another calendar month

--- a/frontend/src/scss/components/calendar/_events.scss
+++ b/frontend/src/scss/components/calendar/_events.scss
@@ -31,6 +31,12 @@
 	padding: 0.25em;
 }
 
+.due-event {
+	background: #2d353e;
+	cursor: pointer;
+	color: #fff;
+}
+
 .event-name, 
 .event-desc {
 	width: 100%;
