--- a/frontend/src/scss/components/_search.scss
+++ b/frontend/src/scss/components/_search.scss
@@ -1,5 +1,6 @@
 .search {
 	align-items: center;
+	position: relative;
 
 	input {
 		padding: 0.75em 0.75em 0.75em 2.5em;
@@ -17,8 +18,9 @@
 	}
 
 	i {
+		top: 0;
 		position: absolute;
 		font-size: 1.25em;
-		padding: 1em;
+		padding: 1.25em 1em;
 	}
 }
