--- a/frontend/src/scss/components/student/_student_analytics.scss
+++ b/frontend/src/scss/components/student/_student_analytics.scss
@@ -1,3 +1,30 @@
 #student-analytics {
     padding: 1em;
 }
+
+.rw-question-container {
+    display: block;
+    padding: 5px;
+}
+
+.rw-question-set {
+    display: flex;
+    flex-direction: column;
+}
+
+.rw-box-answer {
+    display: block;
+}
+
+.rw-box {
+    display: block;   
+    padding: 0 20px;
+}
+
+.rw-incorrect {
+    background: #c60026;
+}
+
+.rw-correct {
+    background: #4b893d;
+}
