analytics page from assigned groups

--- a/frontend/src/scss/components/_all.scss
+++ b/frontend/src/scss/components/_all.scss
@@ -28,6 +28,9 @@
 @import 'student/student_analytics';
 @import 'student/student_profile';
 
+// felix is lazy woops. move me!
+@import 'student/group_analytics';
+
 // Lesson Manager
 @import 'lesson_manager/assign_options';
 @import 'lesson_manager/details';
