--- a/frontend/src/scss/util/_helper_classes.scss
+++ b/frontend/src/scss/util/_helper_classes.scss
@@ -31,6 +31,15 @@
 	display: none;
 }
 
+.empty-block {
+	display: block;
+}
+
+.margin-block {
+	display: block;
+	margin: 20px;
+}
+
 .expand {
 	height: 100%;
 	flex: 100%;
