added another colour

--- a/frontend/src/scss/variables/_colours.scss
+++ b/frontend/src/scss/variables/_colours.scss
@@ -5,6 +5,8 @@ $secondary_font_colour: white;
 $primary_font_colour_faded: #58636c;
 $secondary_font_colour_faded: #ddd;
 
+$primary_font_colour_alt: #454d54;
+
 //backgrounds
 $primary_element_background: #2c353e;
 $primary_element_background_hover: #38424c;
