--- a/frontend/src/scss/components/calendar/_calendar.scss
+++ b/frontend/src/scss/components/calendar/_calendar.scss
@@ -120,3 +120,23 @@
 	margin: 1em;
 	justify-content: space-between;
 }
+
+// TODO
+// this should go in _calendar_day.scss or something
+
+.calendar-day-container {
+	display: block;
+}
+
+.calendar-day-heading {
+	background: #2d353e;
+	border-bottom: 1px solid #a9b5c0;
+	color: #fff;
+	padding: 0 0.8em;
+}
+
+.calendar-day-slot {
+	display: block;
+	border: 1px solid #f5f5f5;
+	padding: 0 0.8em;
+}
