bug fixes, cal day view ui design improvements, move view day button to more coherent place,

--- a/frontend/src/scss/components/calendar/_calendar.scss
+++ b/frontend/src/scss/components/calendar/_calendar.scss
@@ -32,10 +32,21 @@
 	border: 1px solid #f5f5f5;
 }
 
+.calendar-cell-meta {
+	display: flex;
+	justify-content: space-between;
+}
+
 .calendar-day {
 	font-size: 14pt;
 	font-weight: bold;
 	align-self: flex-end;
+}
+
+.view-calendar-day {
+	font-size: 14pt;
+	font-weight: bold;
+	align-self: flex-start;
 }
 
 .current-day .calendar-day {
