encoded events display in the calendar day view properly

--- a/frontend/src/scss/components/calendar/_calendar.scss
+++ b/frontend/src/scss/components/calendar/_calendar.scss
@@ -45,8 +45,8 @@
 
 .view-calendar-day {
 	font-size: 14pt;
-	font-weight: bold;
 	align-self: flex-start;
+	color: #e87f62;
 }
 
 .current-day .calendar-day {
