analytics page layout cleanup

--- a/frontend/src/scss/components/student/_student_analytics.scss
+++ b/frontend/src/scss/components/student/_student_analytics.scss
@@ -37,3 +37,16 @@
 .student-analytics-title {
     display: block;
 }
+
+.quest-box-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.quest-box {
+    flex: 1 0 20%;
+    margin: 0.25em;
+    background: #f5f5f5;
+    padding: 1em;   
+}
