--- a/frontend/src/scss/util/_helper_classes.scss
+++ b/frontend/src/scss/util/_helper_classes.scss
@@ -160,3 +160,15 @@
 .pointer-hover:hover {
 	cursor: pointer;
 }
+
+.upper {
+	text-transform: uppercase;
+}
+
+.lower {
+	text-transform: lowercase;
+}
+
+.capitalized {
+	text-transform: capitalize;
+}
