--- a/frontend/src/scss/components/_containers.scss
+++ b/frontend/src/scss/components/_containers.scss
@@ -60,7 +60,7 @@
 
 .small-box {
     border: 1px solid $bcn-light-orange;
-    padding: 1em;
+    padding: 1em 2em;
     flex: 33%;
     margin: 1em;
     justify-content: space-between;
