add new font for form inputs

--- a/frontend/src/scss/_fonts.scss
+++ b/frontend/src/scss/_fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Questrial|Yantramanav:300,400');
+@import url('https://fonts.googleapis.com/css?family=Questrial|Yantramanav:300,400|Inconsolata');
