--- a/frontend/src/scss/components/_all.scss
+++ b/frontend/src/scss/components/_all.scss
@@ -35,6 +35,7 @@
 @import 'lesson_manager/assign_options';
 @import 'lesson_manager/details';
 @import 'lesson_manager/headers';
+@import 'lesson_manager/edit_plan';
 
 // Profile
 @import 'profile/info';
@@ -60,7 +61,6 @@
 @import 'main';
 @import 'search';
 @import 'sort';
-@import 'textarea';
 @import 'glp';
 @import 'loading';
 @import 'info';
