--- a/frontend/src/scss/components/tiles/_student_overview.scss
+++ b/frontend/src/scss/components/tiles/_student_overview.scss
@@ -29,7 +29,7 @@
 				align-items: center;
 		
 				&:before {
-					font-family: "fontello";
+					font-family: "fontello-beaconing";
 					content: '\f107';
 					position: absolute;
 					right: 0;
