--- a/frontend/src/scss/components/_breadcrumb.scss
+++ b/frontend/src/scss/components/_breadcrumb.scss
@@ -26,5 +26,10 @@
 			color: $bcn_light_orange;
 			font-size: 1.25em;
 		}
+
+		&:first-child {
+			margin: 0 0.15em 0 0;
+			padding: 0.15em 0.15em 0.15em 0;
+		}
 	}
 }
