added combination filters into lesson manager + wip search parser

--- a/frontend/src/scss/components/_all.scss
+++ b/frontend/src/scss/components/_all.scss
@@ -35,7 +35,7 @@
 @import 'lesson_manager/assign_options';
 @import 'lesson_manager/details';
 @import 'lesson_manager/headers';
-@import 'lesson_manager/edit_plan';
+// @import 'lesson_manager/edit_plan';
 
 // Profile
 @import 'profile/info';
