--- a/frontend/src/scss/components/student/_student_analytics.scss
+++ b/frontend/src/scss/components/student/_student_analytics.scss
@@ -38,15 +38,38 @@
     display: block;
 }
 
+.mission-box {
+
+}
+
 .quest-box-container {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
+    justify-content: space-between;
 }
 
 .quest-box {
-    flex: 1 0 20%;
     margin: 0.25em;
     background: #f5f5f5;
     padding: 1em;   
+    display: block;
+}
+
+.quest-box:first-child {
+    width: 100%;
+}
+
+.quest-box:not(:first-child) {
+    flex: 1;
+}
+
+.scenes-container {
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: 33% 33% 33%; // hm?!
+}
+
+.scene-box {
+    
 }
