--- a/frontend/src/scss/components/_forms.scss
+++ b/frontend/src/scss/components/_forms.scss
@@ -62,6 +62,14 @@ form.create-group, form.create-student, form.create-new-plan, form.edit-teacher,
 				"input"
 				"status";
 
+			&.force-mobile {
+				grid-template-areas:
+					"title"
+					"desc"
+					"input"
+					"status";
+			}
+
 			@include for-tablet-landscape-up {
 				grid-template-columns: 3fr 1fr;
 				grid-template-areas:
