--- a/frontend/src/scss/components/student/_student_profile.scss
+++ b/frontend/src/scss/components/student/_student_profile.scss
@@ -53,6 +53,13 @@
 			font-size: 1.25em;
 			margin: 0.25em;
 		}
+
+		h4 {
+			font-weight: 300;
+			font-size: 1.15em;
+			margin: 0 0.25em;
+			color: $primary_font_colour_faded;
+		}
 	}
 
 	.toolbar {
