--- a/frontend/src/scss/components/student/_student_profile.scss
+++ b/frontend/src/scss/components/student/_student_profile.scss
@@ -59,6 +59,10 @@
 			font-size: 1.15em;
 			margin: 0 0.25em;
 			color: $primary_font_colour_faded;
+			
+			a {
+				font-weight: 400;
+			}
 		}
 	}
 
