--- a/frontend/src/scss/components/header/_main.scss
+++ b/frontend/src/scss/components/header/_main.scss
@@ -8,9 +8,11 @@
 
 	.logo {
 		padding: 0.5em;
+		padding-top: 1em;
 
 		@include for-tablet-landscape-up {
 			padding: 0.5em 1.5em;
+			padding-top: 1em;
 		}
 
 		img {
